FISH-10786 Resolve spotbugs warnings